# iot-middleware-freertos-samples

./: .gitignore
.github/workflows/: upload_espressif_components.yml
demos/projects/ESPRESSIF/aziotkit/main/: idf_component.yml
demos/projects/NXP/mimxrt1060/: CMakeLists.txt
demos/projects/NXP/mimxrt1060/sample_cmake/: CMakeLists.txt
demos/projects/NXP/mimxrt1060/sample_pnp_cmake/: CMakeLists.txt
libs/ESPRESSIF/components/azure-iot-kit-sensors/: idf_component.yml
